--- a/9164-h/9164-h.htm
+++ b/9164-h/9164-h.htm
@@ -118,6 +118,8 @@ Posting Date: April 13, 2014 [EBook #9164]
 Release Date: October, 2005
 First Posted: September 10, 2003
 
+Title: The Three Cities Trilogy: Paris, Vol. 1
+
 Author: Emile Zola
 
 Translator: Ernest A. Vizetelly
@@ -5167,7 +5169,7 @@ the horizon.
 
 
 
-End of the Project Gutenberg EBook of The Three Cities Trilogy: Paris, Vol. 1, by 
+End of the Project Gutenberg EBook of The Three Cities Trilogy: Paris, Vol. 1, by
 Emile Zola
 
 *** END OF THIS PROJECT GUTENBERG EBOOK THREE CITIES TRILOGY: PARIS VOL 1 ***
